objects/LAT_CRP_Custom_Report__c.object
<CustomObject>
    <fields>
        <fullName>LAT_Link__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos;+LAT_VisualForceName__c+&apos;?IdRep=&apos;+Id, LAT_ReportName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_ReportName__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_VisualForceName__c</fullName>
        <label>VisualForceName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Custom Report</label>
    <listViews>
        <fullName>Relat_rios_Personalizados</fullName>
        <columns>LAT_Link__c</columns>
        <columns>LAT_ReportName__c</columns>
        <filterScope>Everything</filterScope>
        <label>Relatórios Personalizados</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Custom Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>